--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div>
         <h5> New User? </h5>
       </div>
-      <form>
+      <form class='sign-up'>
         <input type="email" name="credentials[email]" placeholder="Enter Email">
         <input type="password" name="credentials[password]"
         placeholder="Enter Password">
@@ -29,7 +29,7 @@
       <div>
         <h5> Returning User? </h5>
       </div>
-        <form>
+        <form class="sign-in">
           <input class="sign-in-start" type="email" name="credentials[email]" placeholder="Enter Email">
           <input class="sign-in-start" type="password" name="credentials[password]"
           placeholder="Enter Password">
@@ -41,13 +41,13 @@
         <div>
           <h5> Change Password </h5>
         </div>
-        <form>
+        <form class="change-password">
           <input type="password" name="passwords[old]"
           placeholder="Enter Old Password">
           <input type="password" name="passwords[new]"
           placeholder="Enter New Password">
           <button type="submit">Change Password!</button>
-          <button type="button" class="cancel">Cancel</button>
+          <!-- <button type="button" class="cancel">Cancel</button> -->
         </form>
         <!-- <button>Click here to change Password!</button> This will be for change password modal-->
         <!--sign out-->
@@ -60,6 +60,30 @@
         <!--Message Box-->
         <div>
           <div id="auth_message"></div>
+        </div>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+          Launch demo modal
+        </button>
+        <!-- Modal -->
+        <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalTitle">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
         </div>
     </body>
 </html>
