--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div class="row">
           <div class="auth col-12 col-lg-3 panel">
 
+            <!--Auth Message Box-->
+            <div>
+              <div id="auth_message"></div>
+            </div>
             <!--SIGN UP-->
             <div class="sign-up">
               <h5> New User? </h5>
@@ -38,7 +42,7 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <form>
+                      <form id="signUpForm">
                         <input type="email" name="credentials[email]" placeholder="Enter Email">
                         <input type="password" name="credentials[password]"
                         placeholder="Enter Password">
@@ -71,7 +75,7 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <form>
+                      <form id="signInForm">
                         <input class="sign-in-start" type="email" name="credentials[email]" placeholder="Enter Email">
                         <input class="sign-in-start" type="password" name="credentials[password]"
                         placeholder="Enter Password">
@@ -101,7 +105,7 @@
                       </button>
                     </div>
                     <div class="modal-body">
-                      <form>
+                      <form id="changePasswordForm">
                         <input type="password" name="passwords[old]"
                         placeholder="Enter Old Password">
                         <input type="password" name="passwords[new]"
@@ -121,16 +125,10 @@
                 <button>Sign Out!</button>
               </form>
             </div>
-
-            <!--Auth Message Box-->
-            <div>
-              <div id="auth_message"></div>
-            </div>
-
           </div> <!--ends auth column-->
 
           <!-- Button trigger modal -->
-          <div class="col-12 col-lg-3">
+          <div class="content col-12 col-lg-9">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createEncounter">
               Had an Encounter? Click here to log it now!
             </button>
@@ -186,7 +184,7 @@
                       Encounter Description:<span class="required field">*</span> <input type="text" name="encounter_description" placeholder="Ex: Peered through window."><br/>
                       <br>
                       <button type="button" class="btn btn-secondary" data-dismiss="modal">Nevermind</button>
-                      <button type="button" class="btn btn-primary" id="submit-encounter">Submit</button>
+                      <button type="submit" id="create-encounter-submit">Submit</button> <!--class="btn btn-primary"-->
                     </form>
                   </div>
                 </div>
